
0.10.1c Jun 25, 2009

0.10.1b May 23, 2009
 * updated parsing of compressed and uncompressed sizes in
   /var/log/packages entries 
 * fixed handling of a plus sign in package location (path) in MD5
   (Ondrej Zary)
 * fixed small issues in FAQ#17 script

0.10.1a Apr 28, 2009
 * modernized script in FAQ#17. How do I create my own package source?
 * updated makefile for building the slapt-get package
 * updated MD5 parsing to accept new slackware MD5SUM metadata
   in /var/log/packages entries
 * disabled file size check since slack PACKAGES.TXT sizes
   are no longer accurate byte counts
 * added support for txz package extension
 * updated de translation from Manfred Mueller
 * updated pt_BR translation from Sergio Surkamp
 * moved slapt_pkg_version_parts out of public header

0.10.1 Dec 12, 2008
 * fixed an initialization errror in slapt_is_required_by() that
   caused a segfault when removing with --no-deps.
 * if no package sources are defined with a priority, disable use of
   priorities when dealing with /patches.  This prevents the previous
   default slapt-get behavior from changing and causing confusion.  With
   priorities, /patches is always assigned +1 above the package sources
   priority.  So if no priorities were in use then anything found in any
   sources /patches always trumped anything else.  This is probably the
   most correct behavior but it is still unexpected for existing users.
   To get the correct behavior, assign a priority to one or more sources.
 * reordered priorities to "default < official < preferred < custom" as
   this seems to be more intuitive.  Having preferred less than official
   is confusing.

0.10.0 Dec 12, 2008
 * validate against installed package list when creating a list of obsolete
   packages and their dependencies so as to not try and remove uninstalled
   packages
 * translation updates
 * (libslapt) added slapt_write_rc_config (incorporating from gslapt)